--- a/selector.html
+++ b/selector.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>table</title>
 </head>
 <body>
-    <h1>abes college </h1>
+    
+    <table border="5px,solid,black">
+        <thead>
+            <tr>
+                <th>brach</th>
+                <th>section</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>cse</td>
+                <td>a</td>
+            </tr>
+            <tr>
+                <td>cse</td>
+                <td>b</td>
+            </tr>
+            <tr>
+                <td>cse</td>
+                <td>c</td>
+            </tr>
+        </tbody>
+    </table>
     
 </body>
 </html>
