--- a/form.html
+++ b/form.html
@@ -35,7 +35,11 @@
             <option value="english">english</option>
          </select>
          <br><br>
-        <button type="submit">Submit</button>
+         <label >select your file</label>
+         <input type="file">
+         <br>
+
+        <button type="submit" style="background-color: chocolate;">Submit</button>
         <br><br>
     </form>
 </body>
