--- a/javascript/es6/literals.html
+++ b/javascript/es6/literals.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        let x=109;
+    let y=`my age is ${x}`;
+    document.write(y);
+
+    </script>
     
 </body>
 </html>
