--- a/javascript/es6/callback.html
+++ b/javascript/es6/callback.html
@@ -7,15 +7,32 @@
 </head>
 <body>
     <script>
-        
-        function sum(a,b){
-            console.log(a+b)
-        }
-        function cal(a,b,callback){
-            callback(a,b)
 
-        }
-        cal(10,20,sum);
+    function getdata(da,nextda){
+        setTimeout(()=>{
+            console.log(da)
+            if(nextda){
+                nextda()
+            }
+        },2000)
+    }
+
+    getdata("hi",()=>{
+       getdata("shreya",()=>{
+        getdata("pan",()=>{
+            getdata("dey")
+        })
+       })
+    })
+
+        // function sum(a,b){
+        //     console.log(a+b)
+        // }
+        // function cal(a,b,callback){
+        //     callback(a,b)
+
+        // }
+        // cal(10,20,sum);
 
 
     </script>
