--- a/javascript/es6/callback.html
+++ b/javascript/es6/callback.html
@@ -35,6 +35,41 @@
         // cal(10,20,sum);
 
 
+
+
+
+//         function step1(callback) {
+//   setTimeout(() => {
+//     console.log("Step 1 complete");
+//     callback();
+//   }, 1000);
+// }
+
+// function step2(callback) {
+//   setTimeout(() => {
+//     console.log("Step 2 complete");
+//     callback();
+//   }, 1000);
+// }
+
+// function step3(callback) {
+//   setTimeout(() => {
+//     console.log("Step 3 complete");
+//     callback();
+//   }, 1000);
+// }
+
+// // Nested callbacks
+// step1(() => {
+//   step2(() => {
+//     step3(() => {
+//       console.log("All steps done!");
+//     });
+//   });
+// });
+
+
+
     </script>
     
 </body>
